<resources>
    <string name="app_name">Cube Wealth</string>
    <string name="txt_explore">Explore</string>
    <string name="txt_bookmarks">Bookmarks</string>
    <string name="cd_filter_movie_list">Filter Movie List</string>
    <string name="cd_movie_image">Movie Image</string>
    <string name="txt_release_date">Release : %1s</string>
    <string name="txt_genre_text">%1s | %2s | %3s</string>
    <string name="txt_rating_text">%1s / 10</string>
    <string name="txt_your_bookmarks">Your Bookmarks</string>
    <string name="txt_you_haven_t_n_bookmarked_anything">You haven’t \n Bookmarked Anything</string>
    <string name="txt_default">Default</string>
    <string name="txt_release_date_sort">Release Date</string>
    <string name="txt_reviews">Reviews</string>
    <string name="txt_similar_movies">Similar Movies</string>
    <string name="txt_crew">Crew</string>
    <string name="txt_cast">Cast</string>
    <string name="txt_production_companies">Production Companies</string>
    <string name="txt_overview">Overview</string>
    <string name="txt_tagline">Tagline</string>
    <string name="txt_rating">Rating</string>
    <string name="txt_genre">Genre</string>
    <string name="txt_book">BOOK</string>
    <string name="cd_bookmark_button">Bookmark Button</string>
</resources>