<?xml version="1.0" encoding="utf-8"?>
<!--
    Activity Movie Detail Layout which contains coordinator
    layout as its parent, a collapsing toolbar to display the
    app title which can be used as a great UI for the user
    in the near future by changing the contents inside it

    A nested scroll view is used to display the movie Details
    content which can be scrolled to view the required contents

    An Image button is used to perform the action to bookmark
    the movie displayed
-->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/buttonBgTint"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/buttonBgTint"
                app:layout_collapseMode="pin" />

            <ImageButton
                android:id="@+id/button_backButton_movieDetailActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:background="@color/buttonBgTint"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/textView_movieTitle_movieDetailActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAlignment="center"
                android:textColor="@color/headingTextColor"
                android:textSize="18dp" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/contentView_activityMovieDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView_movieBackdrop_movieDetailActivity"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_moviePoster_movieDetailActivity"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@id/layout_movieSynopsis_movieDetailActivity"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/layout_movieSynopsis_movieDetailActivity" />

            <LinearLayout
                android:id="@+id/layout_movieSynopsis_movieDetailActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView_moviePoster_movieDetailActivity"
                app:layout_constraintTop_toBottomOf="@id/imageView_movieBackdrop_movieDetailActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_genre"
                    android:textColor="@color/bottomNavUnSelected" />

                <TextView
                    android:id="@+id/textView_genreText_movieDetailActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/bottomNavSelected" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_release_date_sort"
                    android:textColor="@color/bottomNavUnSelected" />

                <TextView
                    android:id="@+id/textView_releaseDate_movieDetailActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/bottomNavSelected" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_rating"
                    android:textColor="@color/bottomNavUnSelected" />

                <TextView
                    android:id="@+id/textView_rating_movieDetailActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/bottomNavSelected" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/imageView_moviePoster_movieDetailActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_tagline"
                    android:textColor="@color/bottomNavUnSelected" />

                <TextView
                    android:id="@+id/textView_taglineText_movieDetailActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/bottomNavSelected" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_overview"
                    android:textColor="@color/bottomNavUnSelected" />

                <TextView
                    android:id="@+id/textView_overviewText_movieDetailActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/bottomNavSelected" />

                <TextView
                    android:id="@+id/textView_title_movieProduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_production_companies"
                    android:textColor="@color/bottomNavUnSelected" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_productionCompanies_movieDetailActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/textView_title_movieCasts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_cast"
                    android:textColor="@color/bottomNavUnSelected" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cast_movieDetailActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/textView_title_movieCrews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_crew"
                    android:textColor="@color/bottomNavUnSelected" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_crew_movieDetailActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/textView_title_similarMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_similar_movies"
                    android:textColor="@color/bottomNavUnSelected" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_similarMovies_movieDetailActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/textView_title_movieReviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_reviews"
                    android:textColor="@color/bottomNavUnSelected" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_reviews_movieDetailActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar_activityMovieDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/buttonTint"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/button_addBookmark_activityMovieDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:background="@drawable/bg_bookmarked_movie_button"
        android:padding="16dp"
        android:src="@drawable/ic_bookmarked"
        android:contentDescription="@string/cd_bookmark_button" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>